Add izapple2 (Apple2 emulator in Go)

--- a/Config.in
+++ b/Config.in
@@ -479,6 +479,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/flycast/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/hypseus-singe/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/ikemen/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/izapple2/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/lime3ds/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/mame/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/mednafen/Config.in"
