--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1255,6 +1255,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 
 	# Apple 2
 	select BR2_PACKAGE_APPLEWIN		# ALL
+	select BR2_PACKAGE_IZAPPLE2		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
 
 	# Apple 2 GS
 	select BR2_PACKAGE_GSPLUS		# ALL
