--- a/Config.in
+++ b/Config.in
@@ -541,6 +541,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/eduke32/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/etlegacy/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/fheroes2/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/gemrb/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/gzdoom/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/hurrican/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/ports/ioquake3/Config.in"
