--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -1172,6 +1172,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	# CorsixTH (Theme Hospital engine)
 	select BR2_PACKAGE_CORSIXTH			if BR2_ARCH_IS_64
 
+	# GemRB (Infinity Engine for Baldur's Gate games)
+	select BR2_PACKAGE_GEMRB			if !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_mipsel
+
 	# The Force Engine
 	select BR2_PACKAGE_THEFORCEENGINE		if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL # Requires OpenGL 3.3 or later
 
