Fix applewin build (needs minizip-zlib, "new" minizip from zlib-ng not supported)

--- a/package/reglinux/emulators/applewin/Config.in
+++ b/package/reglinux/emulators/applewin/Config.in
@@ -4,8 +4,7 @@ config BR2_PACKAGE_APPLEWIN
 	select BR2_PACKAGE_SDL2_IMAGE
 	select BR2_PACKAGE_BOOST
 	select BR2_PACKAGE_BOOST_PROGRAM_OPTIONS
-	select BR2_PACKAGE_MINIZIP
-	#select BR2_PACKAGE_MINIZIP_ZLIB
+	select BR2_PACKAGE_MINIZIP_ZLIB
 	select BR2_PACKAGE_SLIRP
 	select BR2_PACKAGE_LIBPCAP
 	select BR2_PACKAGE_LIBYAML
