--- a/board/batocera/allwinner/h616/orangepi-zero2w/genimage.cfg
+++ b/board/batocera/allwinner/h616/orangepi-zero2w/genimage.cfg
@@ -24,8 +24,8 @@ image reglinux.img {
 
 	partition spl {
 		in-partition-table = "no"
-		image = "../../uboot-multiboard/orangepi_zero2w/u-boot-sunxi-with-spl.bin"
-		offset = 8192
+		image = "../uboot-orangepi-zero2w/u-boot-sunxi-with-spl.bin"
+		offset = 8k
 	}
 
 	partition boot {
