Fix prebuilding Qt6 following BR bump

--- a/package/reglinux/libraries/reglinux-qt6/Config.in
+++ b/package/reglinux/libraries/reglinux-qt6/Config.in
@@ -23,6 +23,9 @@ config BR2_PACKAGE_REGLINUX_QT6
 
 	select BR2_PACKAGE_QT6				if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6_VERSION_LATEST		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
+	select BR2_PACKAGE_HOST_QT6BASE_TEST		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
+	select BR2_PACKAGE_HOST_QT6BASE_SQL		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
+	select BR2_PACKAGE_HOST_QT6TOOLS_LINGUIST_TOOLS	if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6BASE			if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6BASE_CONCURRENT		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6BASE_DBUS			if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
