Test Mesa 25.0.0-rc1 on rk3588

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -346,8 +346,9 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
-						    BR2_PACKAGE_BATOCERA_TARGET_JH7110  || \
+						    BR2_PACKAGE_BATOCERA_TARGET_RK3588	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_SM8250	|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_JH7110  || \
 						    BR2_PACKAGE_BATOCERA_TARGET_K1
 
 	# wireless drivers
@@ -1049,10 +1050,11 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_ARDUOUS		# ALL
 
 	# Sony PS Vita
-	# Note: Vulkan crash on bcm2712, rk3588 not ready, sm8250 to test
+	# Note: needs testing for bcm2712, rk3588, sm8250
 	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 	# MegaDuck
 	select BR2_PACKAGE_LIBRETRO_SAMEDUCK		# ALL
@@ -1402,6 +1404,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 	#select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 
@@ -1412,6 +1415,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Microsoft Xbox 360
@@ -1421,15 +1425,18 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Sony PS2
 	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS3 (TODO saphira build error since BR bump)
 	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
 							   #|| BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
@@ -1439,6 +1446,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Wii U
 	select BR2_PACKAGE_CEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
 
