--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -739,7 +739,7 @@ config BR2_PACKAGE_BATOCERA_ALL_SYSTEMS
 
 	select BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
-	#select BR2_PACKAGE_REGLINUX_MOBILE_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_MOBILE_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	help
 	  batocera.linux all supported emulation systems
@@ -749,12 +749,13 @@ config BR2_PACKAGE_REGLINUX_MOBILE_SYSTEMS
 	 bool "REG-Linux mobile systems support"
 
 	# Symbian OS / Nokia N-Gage emulator
-	select BR2_PACKAGE_EKA2L1		if BR2_x86_64				|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_RK3588   || \
-						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
+	select BR2_PACKAGE_EKA2L1		if BR2_x86_64				
+#|| \
+#						   BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
+#						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
+#						   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
+#						   BR2_PACKAGE_BATOCERA_TARGET_RK3588   || \
+#						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
 ### Pinball systems ###
