Restore EKA2L1 ARM/AArch64 support with Wayland/GLES

--- a/package/reglinux/emulators/eka2l1/Config.in
+++ b/package/reglinux/emulators/eka2l1/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_EKA2L1
     bool "eka2l1"
 
     select BR2_PACKAGE_REGLINUX_QT6
+    select BR2_PACKAGE_FFMPEG
 
     help
       Symbian OS / N-Gage emulator
