--- a/board/reglinux/spacemit/k1/bananapi-f3/boot/extlinux.conf
+++ b/board/reglinux/spacemit/k1/bananapi-f3/boot/extlinux.conf
@@ -1,4 +1,4 @@
 LABEL reg.linux
 LINUX /boot/linux
-FDT /k1-x_deb1.dtb
+FDT /k1-bananapi-f3.dtb
 APPEND initrd=/boot/initrd.gz label=REGLINUX root=/dev/mmcblk0p5 rootwait verbose loglevel=9 console=ttyS0,115200 console=tty3 vt.global_cursor_default=0
