[Hotfix] Fix lunasvg now requires plutovg

--- a/package/reglinux/libraries/lunasvg/Config.in
+++ b/package/reglinux/libraries/lunasvg/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_LUNASVG
 	bool "lunasvg"
+	select BR2_PACKAGE_PLUTOVG
 
 	help
 	  LunaSVG is an SVG rendering library in C++, designed to be lightweight and portable, 
