--- a/Config.in
+++ b/Config.in
@@ -575,6 +575,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/libxmp/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/libzedmd/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/lunasvg/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/plutovg/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-qt6/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3-mixer/Config.in"
