--- a/package/reglinux/libraries/libaltsound/Config.in
+++ b/package/reglinux/libraries/libaltsound/Config.in
@@ -2,6 +2,8 @@ config BR2_PACKAGE_LIBALTSOUND
     bool "libaltsound"
     select BR2_PACKAGE_ZLIB
     select BR2_HOST_CMAKE_AT_LEAST_3_26
+    select BR2_HOST_LIBCURL
+    select BR2_HOST_LIBCURL_CURL
     help
       libaltsound - A cross platform compilation of altsound that is baked directly into VPinMAME.
       
