Enable PanVK on Bifrost targets, Mesa 25.0-rc series for all Vulkan-enabled targets

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -133,7 +133,7 @@ config BR2_PACKAGE_BATOCERA_MUSIC_SUPPORT
 	  Music support packages (MIDI and ALSA)
 
 config BR2_PACKAGE_REGLINUX_VULKAN
-	bool "batocera.linux Vulkan support"
+	bool "REG-Linux Vulkan support"
 
 	# Vulkan headers, loaders, SPIR-V, glsLang
 	select BR2_PACKAGE_VULKAN_HEADERS
@@ -343,12 +343,18 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_GAMEMODE		# ALL
 
 	# Vulkan-enabled targets
-	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
-						    BR2_PACKAGE_BATOCERA_TARGET_BCM2711	|| \
-						    BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
-						    BR2_PACKAGE_BATOCERA_TARGET_RK3588	|| \
-						    BR2_PACKAGE_BATOCERA_TARGET_SM8250	|| \
-						    BR2_PACKAGE_BATOCERA_TARGET_JH7110  || \
+	select BR2_PACKAGE_REGLINUX_VULKAN	if  BR2_PACKAGE_BATOCERA_TARGET_X86_ANY		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_H616		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_RK3326		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_RK3568		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_S905GEN2	|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_S905GEN3	|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_JH7110		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_K1
 
 	# wireless drivers
