--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -352,6 +352,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_S905GEN2	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_S905GEN3	|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_JH7110		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_K1
@@ -879,14 +880,12 @@ config BR2_PACKAGE_BATOCERA_SEGADC
 	select BR2_PACKAGE_FLYCAST		if !BR2_RISCV_64			&& \
 						   !BR2_mipsel				&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2836	&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2837	&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_RK3326
+						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2837
 
 	select BR2_PACKAGE_LIBRETRO_FLYCAST	if !BR2_RISCV_64			&& \
 						   !BR2_mipsel				&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2836	&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2837	&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_RK3326
+						   !BR2_PACKAGE_BATOCERA_TARGET_BCM2837
 
 	select BR2_PACKAGE_LIBRETRO_FLYCASTVL	if BR2_PACKAGE_BATOCERA_TARGET_BCM2836	|| \
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2837	|| \
