Fix packaging firmware for JH7110 and K1

--- a/board/batocera/starfive/jh7110/linux-defconfig.config
+++ b/board/batocera/starfive/jh7110/linux-defconfig.config
@@ -2117,7 +2117,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
-CONFIG_INPUT_TOUCHSCREEN=y
+# CONFIG_INPUT_TOUCHSCREEN is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
@@ -2140,7 +2140,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_EGALAX_SERIAL is not set
 # CONFIG_TOUCHSCREEN_EXC3000 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
-CONFIG_TOUCHSCREEN_GOODIX=m
+# CONFIG_TOUCHSCREEN_GOODIX is not set
 # CONFIG_TOUCHSCREEN_HIDEEP is not set
 # CONFIG_TOUCHSCREEN_HYCON_HY46XX is not set
 # CONFIG_TOUCHSCREEN_HYNITRON_CSTXXX is not set
@@ -2197,7 +2197,7 @@ CONFIG_TOUCHSCREEN_GOODIX=m
 # CONFIG_TOUCHSCREEN_IQS7211 is not set
 # CONFIG_TOUCHSCREEN_ZINITIX is not set
 # CONFIG_TOUCHSCREEN_HIMAX_HX83112B is not set
-CONFIG_TOUCHSCREEN_TINKER_FT5406=m
+# CONFIG_TOUCHSCREEN_TINKER_FT5406 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ARIEL_PWRBUTTON is not set
@@ -4010,7 +4010,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_HI847 is not set
 # CONFIG_VIDEO_IMX208 is not set
 # CONFIG_VIDEO_IMX214 is not set
-CONFIG_VIDEO_IMX219=m
+# CONFIG_VIDEO_IMX219 is not set
 # CONFIG_VIDEO_IMX258 is not set
 # CONFIG_VIDEO_IMX274 is not set
 # CONFIG_VIDEO_IMX290 is not set
@@ -4021,7 +4021,7 @@ CONFIG_VIDEO_IMX219=m
 # CONFIG_VIDEO_IMX355 is not set
 # CONFIG_VIDEO_IMX412 is not set
 # CONFIG_VIDEO_IMX415 is not set
-CONFIG_VIDEO_IMX708=m
+# CONFIG_VIDEO_IMX708 is not set 
 # CONFIG_VIDEO_MT9M001 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 # CONFIG_VIDEO_MT9P031 is not set
@@ -5210,7 +5210,7 @@ CONFIG_USB_HID=y
 # CONFIG_USB_HIDDEV is not set
 # end of USB HID support
 
-CONFIG_I2C_HID=y
+# CONFIG_I2C_HID is not set
 # CONFIG_I2C_HID_OF is not set
 # CONFIG_I2C_HID_OF_ELAN is not set
 # CONFIG_I2C_HID_OF_GOODIX is not set
@@ -7465,15 +7465,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
-CONFIG_JFFS2_FS=y
-CONFIG_JFFS2_FS_DEBUG=0
-CONFIG_JFFS2_FS_WRITEBUFFER=y
-# CONFIG_JFFS2_FS_WBUF_VERIFY is not set
-# CONFIG_JFFS2_SUMMARY is not set
-# CONFIG_JFFS2_FS_XATTR is not set
-# CONFIG_JFFS2_COMPRESSION_OPTIONS is not set
-CONFIG_JFFS2_ZLIB=y
-CONFIG_JFFS2_RTIME=y
+# CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_CACHE=y
