Initial SDL3_image 3.2.0

--- a/Config.in
+++ b/Config.in
@@ -578,6 +578,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/plutovg/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-qt6/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3-image/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/sdl3-mixer/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/vulkan-volk/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/libraries/reglinux-luajit/Config.in"
