--- a/package/batocera/core/batocera-audio/Config.in
+++ b/package/batocera/core/batocera-audio/Config.in
@@ -12,7 +12,13 @@ config BR2_PACKAGE_BATOCERA_AUDIO
 	select BR2_PACKAGE_ALSA_PLUGINS
 	select BR2_PACKAGE_SBC
 	select BR2_PACKAGE_PIPEWIRE
+	select BR2_PACKAGE_PIPEWIRE_V4L2
 	select BR2_PACKAGE_PULSEAUDIO
 	select BR2_PACKAGE_WIREPLUMBER
+	select BR2_PACKAGE_LIBFREEAPTX
+	select BR2_PACKAGE_LIBLDAC
+	select BR2_PACKAGE_LIBLC3
+	select BR2_PACKAGE_LIBSAMPLERATE
+	select BR2_PACKAGE_SOUND_OPEN_FIRMWARE   if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 	help
 	  Audio support and scripts for batocera.linux
