--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -94,6 +94,7 @@ if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY          || \
    BR2_PACKAGE_BATOCERA_TARGET_JH7110           || \
    BR2_PACKAGE_BATOCERA_TARGET_K1               || \
    BR2_PACKAGE_BATOCERA_TARGET_H616             || \
+   BR2_PACKAGE_BATOCERA_TARGET_H700		|| \
    BR2_PACKAGE_BATOCERA_TARGET_AMLOGIC_GLES3    || \
    BR2_PACKAGE_BATOCERA_TARGET_ROCKCHIP_GLES3   || \
    BR2_PACKAGE_BATOCERA_TARGET_ODIN             || \
@@ -347,6 +348,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_H616		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_H700		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_RK3326		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_RK3568		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
@@ -367,7 +369,8 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3588		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3128		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_S812		&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN
+						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN		&& \
+						   !BR2_PACKAGE_BATOCERA_TARGET_H700
 
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_BATOCERA_TARGET_S922X || BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 	select BR2_PACKAGE_RTL88X2BU		if BR2_PACKAGE_BATOCERA_TARGET_S922X || BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
@@ -487,7 +490,7 @@ config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	default "allwinner/h6/orangepi-3-lts allwinner/h6/orangepi-3 allwinner/h6/orangepi-one-plus"	if BR2_PACKAGE_BATOCERA_TARGET_H6
 	default "allwinner/h616/orangepi-zero2 allwinner/h616/orangepi-zero2w allwinner/h616/orangepi-zero3 allwinner/h616/bananapi-m4-berry allwinner/h616/x96-mate" \
 													if BR2_PACKAGE_BATOCERA_TARGET_H616
-
+	default "allwinner/h700/anbernic-rg35xx"							if BR2_PACKAGE_BATOCERA_TARGET_H700
 	# Amlogic targets
 	default "amlogic/s812"										if BR2_PACKAGE_BATOCERA_TARGET_S812
 	default "amlogic/s905/nanopi-k2 amlogic/s905/odroid-c2 amlogic/s905/s905-tvbox amlogic/s905/lepotato amlogic/s905/khadas-vim1 amlogic/s905/p201 amlogic/s905/lepotato-v2 amlogic/s905/minix-neo-u1" \
@@ -633,6 +636,9 @@ config BR2_PACKAGE_BATOCERA_TARGET_H5
 
 config BR2_PACKAGE_BATOCERA_TARGET_H616
 	bool "h616"
+
+config BR2_PACKAGE_BATOCERA_TARGET_H700
+	bool "h700"
 
 config BR2_PACKAGE_BATOCERA_TARGET_H6
 	bool "h6"
@@ -996,6 +1002,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3326	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_XU4	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_H616	|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_H700	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_H6
 
 	select BR2_PACKAGE_MELONDS			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326)
@@ -1467,7 +1474,8 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   !BR2_PACKAGE_BATOCERA_TARGET_H3		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H5		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H6		&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_H616
+							   !BR2_PACKAGE_BATOCERA_TARGET_H616		&& \
+							   !BR2_PACKAGE_BATOCERA_TARGET_H700
 
 
 	# Atari Jaguar
@@ -1498,6 +1506,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   !BR2_PACKAGE_BATOCERA_TARGET_S905		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H5		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H616		&& \
+							   !BR2_PACKAGE_BATOCERA_TARGET_H700		&& \
 							   !BR2_PACKAGE_BATOCERA_TARGET_H6
 
 	# SNK Neo Geo AES / MVS
@@ -1647,7 +1656,8 @@ config BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712	|| \
 						   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3568	|| \
-						   BR2_PACKAGE_BATOCERA_TARGET_H616
+						   BR2_PACKAGE_BATOCERA_TARGET_H616	|| \
+						   BR2_PACKAGE_BATOCERA_TARGET_H700
 
 	help
 	  Emulators under development (Experimental)
@@ -1756,7 +1766,7 @@ config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 	bool "batocera.linux Firmwares packages selection"
 
 	# alllinuxfirmwares
-	select BR2_PACKAGE_ALLLINUXFIRMWARES		if !BR2_PACKAGE_BATOCERA_TARGET_H616
+	select BR2_PACKAGE_ALLLINUXFIRMWARES		if !BR2_PACKAGE_BATOCERA_TARGET_H616 && !BR2_PACKAGE_BATOCERA_TARGET_H700
 
 	# buildroot firmware
 	select BR2_PACKAGE_LINUX_FIRMWARE		if BR2_PACKAGE_BATOCERA_TARGET_RK3288
@@ -1783,6 +1793,7 @@ config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 
 	# Extra linux firmware
 	select BR2_PACKAGE_EXTRALINUXFIRMWARES			if BR2_PACKAGE_BATOCERA_TARGET_H616		|| \
+								   BR2_PACKAGE_BATOCERA_TARGET_H700		|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_H6		|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_AMLOGIC_ANY	|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_RK3399
@@ -1790,7 +1801,8 @@ config BR2_PACKAGE_BATOCERA_LINUX_FIRMWARES
 	select BR2_PACKAGE_FIRMWARE_ORANGEPI			if BR2_PACKAGE_BATOCERA_TARGET_H3	|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_H5	|| \
 								   BR2_PACKAGE_BATOCERA_TARGET_H6	|| \
-								   BR2_PACKAGE_BATOCERA_TARGET_H616
+								   BR2_PACKAGE_BATOCERA_TARGET_H616	|| \
+								   BR2_PACKAGE_BATOCERA_TARGET_H700
 
 config BR2_PACKAGE_REGLINUX_SDL2
 	bool "REG-Linux SDL2"
