Avoid using FUSE version of exFAT and NTFS drivers
- Only use ntfs-3g with kernel  5.4 or 5..10 and exFAT (fuse) with kernel 5.4
   This fixes SSH not working when using exFAT SHARE partition.
- Make some kernel modules similar on all devices.
- Make file system options uniform between ES and REG-rescue.
- system-mount tries to fix dirty NTFS partitions (they fail when mounted).
- Bump  REG-rescue (fixes severe bug when formatting ntfs).

--- a/board/batocera/broadcom/bcm2837/linux-broadcom64-current.config
+++ b/board/batocera/broadcom/bcm2837/linux-broadcom64-current.config
@@ -6387,7 +6387,7 @@ CONFIG_UDF_FS=m
 # DOS/FAT/EXFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=y
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="ascii"
@@ -6464,7 +6464,7 @@ CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 # CONFIG_UFS_FS is not set
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
+CONFIG_NFS_FS=m
 CONFIG_NFS_V2=y
 CONFIG_NFS_V3=y
 CONFIG_NFS_V3_ACL=y
