--- a/board/batocera/starfive/jh7110/linux-defconfig-fragment.config
+++ b/board/batocera/starfive/jh7110/linux-defconfig-fragment.config
@@ -13,6 +13,6 @@ CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_ZSTD=y
 
 # filesystem support
-CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_FS=m
 CONFIG_VFAT_FS=y
-CONFIG_NTFS3_FS=y
+CONFIG_NTFS3_FS=m
