--- a/board/batocera/allwinner/linux-sunxi64-current.config
+++ b/board/batocera/allwinner/linux-sunxi64-current.config
@@ -6004,7 +6004,7 @@ CONFIG_PSTORE_COMPRESS=y
 # CONFIG_UFS_FS is not set
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
+CONFIG_NFS_FS=m
 CONFIG_NFS_V2=y
 CONFIG_NFS_V3=y
 # CONFIG_NFS_V3_ACL is not set
