--- a/board/batocera/broadcom/bcm2835/linux-broadcom32-current.config
+++ b/board/batocera/broadcom/bcm2835/linux-broadcom32-current.config
@@ -5345,7 +5345,7 @@ CONFIG_EXFAT_FS=m
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
 CONFIG_NTFS3_FS=m
-# CONFIG_NTFS3_LZX_XPRESS is not set
+CONFIG_NTFS3_LZX_XPRESS=y
 # CONFIG_NTFS3_FS_POSIX_ACL is not set
 # end of DOS/FAT/EXFAT/NT Filesystems
 
@@ -5412,7 +5412,7 @@ CONFIG_PSTORE_RAM=y
 # CONFIG_UFS_FS is not set
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
+CONFIG_NFS_FS=m
 CONFIG_NFS_V2=y
 CONFIG_NFS_V3=y
 # CONFIG_NFS_V3_ACL is not set
