--- a/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
+++ b/board/batocera/rockchip/rk3326/linux-rk3326-defconfig.config
@@ -5909,7 +5909,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 CONFIG_EXFAT_FS=m
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-# CONFIG_NTFS3_FS is not set
+CONFIG_NTFS3_FS=m
 # CONFIG_NTFS_FS is not set
 # end of DOS/FAT/EXFAT/NT Filesystems
 
@@ -5983,7 +5983,7 @@ CONFIG_PSTORE_RAM=y
 # CONFIG_UFS_FS is not set
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
+CONFIG_NFS_FS=m
 CONFIG_NFS_V2=y
 CONFIG_NFS_V3=y
 # CONFIG_NFS_V3_ACL is not set
