--- a/board/batocera/rockchip/rk3568/linux-defconfig.config
+++ b/board/batocera/rockchip/rk3568/linux-defconfig.config
@@ -8399,7 +8399,7 @@ CONFIG_UDF_FS=m
 # DOS/FAT/EXFAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-CONFIG_MSDOS_FS=m
+# CONFIG_MSDOS_FS is not set
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
