--- a/board/reglinux/mediatek/mt8395/linux-defconfig.config
+++ b/board/reglinux/mediatek/mt8395/linux-defconfig.config
@@ -7791,7 +7791,7 @@ CONFIG_UFS_FS=y
 # CONFIG_UFS_DEBUG is not set
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
+CONFIG_NFS_FS=m
 CONFIG_NFS_V2=y
 CONFIG_NFS_V3=y
 # CONFIG_NFS_V3_ACL is not set
