--- a/package/reglinux/reglinux-exfat/Config.in
+++ b/package/reglinux/reglinux-exfat/Config.in
@@ -1,12 +1,18 @@
 config BR2_PACKAGE_REGLINUX_EXFAT
         bool "reglinux-exfat"
 
-	# exFAT FUSE implementation
-        select BR2_PACKAGE_EXFAT                        
-	# exFAT userspace utilities (for FUSE-based driver)
-        select BR2_PACKAGE_EXFAT_UTILS                  if  BR2_PACKAGE_EXFAT 
-	# exFAT userspace utilities (for 5.7+ kernel-based support)
-        select BR2_PACKAGE_EXFATPROGS                   if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_4 
+        # exFAT FUSE implementation
+        select BR2_PACKAGE_EXFAT                            if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_4
+
+
+# To-Do: replace "exFAT FUSE" with kernel driver backport from https://github.com/namjaejeon/linux-exfat-oot/tree/for-kernel-version-from-4.1.0
+#        but how to download, extract `exfat` folder into linux kernel folder and setup before compiling kernel 5.4 ?
+
+
+        # exFAT userspace utilities (for FUSE-based driver)
+        select BR2_PACKAGE_EXFAT_UTILS                      if  BR2_PACKAGE_EXFAT
+        # exFAT userspace utilities (for 5.7+ kernel-based support)
+        select BR2_PACKAGE_EXFATPROGS                       if !BR2_PACKAGE_EXFAT
 
         help
           exFAT custom implementation using either FUSE or in-kernel exFAT support
