--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -193,7 +193,8 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_DOSFSTOOLS_FATLABEL		# fat
 	select BR2_PACKAGE_E2FSPROGS			# ext4
 	select BR2_PACKAGE_REGLINUX_EXFAT		# exfat
-	select BR2_PACKAGE_REGLINUX_NTFS		# ntfs
+	select BR2_PACKAGE_NTFS_3G				# ntfs-3g will only install on kernel 5.4 or 5.10 and will build ntfsprogs, for both NTFS3 and ntfs-3g
+	select BR2_PACKAGE_NTFS_3G_NTFSPROGS
 	select BR2_PACKAGE_BTRFS_PROGS			# btrfs
 	select BR2_PACKAGE_CONNMAN			# network manager
 	select BR2_PACKAGE_CONNMAN_WIFI			# network manager
