Gopher64 and Ares WIP

--- a/Config.in
+++ b/Config.in
@@ -466,6 +466,7 @@ menu "REG.linux"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/duckstation/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/eka2l1/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/flycast/Config.in"
+  source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/gopher64/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/hypseus-singe/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/ikemen/Config.in"
   source "$BR2_EXTERNAL_REGLINUX_PATH/package/reglinux/emulators/izapple2/Config.in"
