--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1352,6 +1352,10 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 
+	# Gopher 64
+	# build error so far on cross-compiling, so x86 only
+	select BR2_PACKAGE_GOPHER64			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+
 	# Dreamcast
 	select BR2_PACKAGE_BATOCERA_SEGADC		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
 
