--- a/package/reglinux/emulators/ares/Config.in
+++ b/package/reglinux/emulators/ares/Config.in
@@ -5,7 +5,8 @@ config BR2_PACKAGE_ARES
     select BR2_PACKAGE_PANGO
     select BR2_PACKAGE_CAIRO
     select BR2_PACKAGE_LIBGTK3
-    depends on BR2_PACKAGE_HAS_LIBGL
+    select BR2_PACKAGE_LIBRASHADER
+    depends on BR2_PACKAGE_HAS_LIBGL && BR2_ARCH_IS_64
   
     help
       ares is a cross-platform, open source, multi-system emulator, focusing on accuracy and preservation.
