x96-mate: bump uboot to 2025.01

--- a/board/batocera/allwinner/h616/x96-mate/genimage.cfg
+++ b/board/batocera/allwinner/h616/x96-mate/genimage.cfg
@@ -24,8 +24,8 @@ image reglinux.img {
 
 	partition spl {
 		in-partition-table = "no"
-		image = "../../uboot-multiboard/x96_mate/u-boot-sunxi-with-spl.bin"
-		offset = 8192
+		image = "../uboot-x96-mate/u-boot-sunxi-with-spl.bin"
+		offset = 8k
 	}
 
 	partition boot {
