bananapi-m4-berry: bump uboot to 2025.01

--- a/board/batocera/allwinner/h616/bananapi-m4-berry/genimage.cfg
+++ b/board/batocera/allwinner/h616/bananapi-m4-berry/genimage.cfg
@@ -24,8 +24,8 @@ image reglinux.img {
 
 	partition spl {
 		in-partition-table = "no"
-		image = "../../uboot-multiboard/bananapi_m4berry/u-boot-sunxi-with-spl.bin"
-		offset = 8192
+		image = "../uboot-bananapi-m4-berry/u-boot-sunxi-with-spl.bin"
+		offset = 8k
 	}
 
 	partition boot {
