--- a/package/reglinux/emulators/thextech/Config.in
+++ b/package/reglinux/emulators/thextech/Config.in
@@ -1,9 +1,9 @@
 config BR2_PACKAGE_THEXTECH
     bool "thextech"
-    depends on BR2_PACKAGE_SDL2
-    depends on BR2_PACKAGE_SDL2_MIXER
+    select BR2_PACKAGE_SDL2
+    select BR2_PACKAGE_SDL2_MIXER
     select BR2_PACKAGE_SDL2_TTF
-
+    
     help
       TheXTech is a C++ SMBX engine
 
