(Hotfix) PCSX2 broken, xemu hash missing + shaderc fixes, minor bumps

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -158,7 +158,7 @@ config BR2_PACKAGE_REGLINUX_VULKAN
 	select BR2_PACKAGE_MESA3D_VULKAN_DRIVER_LAVAPIPE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
 
 	# Vulkan samples
-	select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_PACKAGE_BATOCERA_DEBUG
+	#select BR2_PACKAGE_VULKAN_SAMPLES			if BR2_PACKAGE_BATOCERA_DEBUG
 
 	help
 	  Vulkan support for REG-Linux
@@ -466,7 +466,7 @@ config BR2_PACKAGE_BATOCERA_DEBUG
 	bool "add debug options"
 
 	select BR2_PACKAGE_TMUX
-	select BR2_PACKAGE_STRACE
+	#select BR2_PACKAGE_STRACE
 	select BR2_PACKAGE_VALGRIND
 	select BR2_BINUTILS_GPROFNG
 	select BR2_PACKAGE_GDB
@@ -1353,8 +1353,8 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 
 	# Gopher 64
-	# build error so far on cross-compiling, so x86 only
-	select BR2_PACKAGE_GOPHER64			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	# build error so far on cross-compiling, so x86_64_v3 only (because the build system explicitely set it)
+	select BR2_PACKAGE_GOPHER64			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
 
 	# Dreamcast
 	select BR2_PACKAGE_BATOCERA_SEGADC		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
@@ -1419,7 +1419,11 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
-	#select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+	#select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY ||
+	#						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+	#						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+	#						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
+	#						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 
 	# Triforce
 	select BR2_PACKAGE_DOLPHIN_TRIFORCE		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
