--- a/package/batocera/libraries/python-binho-host-adapter/Config.in
+++ b/package/batocera/libraries/python-binho-host-adapter/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_PYTHON_BINHO_HOST_ADAPTER
 	bool "python-binho-host-adapter"
 	select BR2_PACKAGE_PYTHON_SERIAL
+	select BR2_PACKAGE_HOST_PYTHON_SETUPTOOLS_SCM
 	help
 	  Cross-platform Python 3.x library for automated control of
 	  Binho Multi-Protocol USB Host Adapters.
