--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1184,7 +1184,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_CORSIXTH			if BR2_ARCH_IS_64
 
 	# GemRB (Infinity Engine for Baldur's Gate games)
-	select BR2_PACKAGE_GEMRB			if !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_mipsel
+	select BR2_PACKAGE_GEMRB			if !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
 
 	# The Force Engine
 	select BR2_PACKAGE_THEFORCEENGINE		if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL # Requires OpenGL 3.3 or later
