--- a/package/batocera/libraries/python-adafruit-circuitpython-neopixel-spi/Config.in
+++ b/package/batocera/libraries/python-adafruit-circuitpython-neopixel-spi/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_NEOPIXEL_SPI
 	bool "python-adafruit-circuitpython-neopixel-spi"
 	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_BUSDEVICE
 	select BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_PIXELBUF
+	select BR2_PACKAGE_HOST_PYTHON_SETUPTOOLS_SCM
 	help
 	  SPI driven CircuitPython driver for neopixels.
 
