--- a/package/batocera/libraries/python-adafruit-circuitpython-typing/Config.in
+++ b/package/batocera/libraries/python-adafruit-circuitpython-typing/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_PYTHON_ADAFRUIT_CIRCUITPYTHON_TYPING
 	bool "python-adafruit-circuitpython-typing"
+	select BR2_PACKAGE_HOST_PYTHON_SETUPTOOLS_SCM
 	help
 	  Types needed for type annotation that are not in `typing`
 
