--- a/package/batocera/libraries/python-adafruit-pureio/Config.in
+++ b/package/batocera/libraries/python-adafruit-pureio/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_PYTHON_ADAFRUIT_PUREIO
 	bool "python-adafruit-pureio"
+	select BR2_PACKAGE_HOST_PYTHON_SETUPTOOLS_SCM
 	help
 	  Pure python (i.e. no native extensions) access to Linux IO including
 	  I2C and SPI. Drop in replacement for smbus and spidev modules.
