--- a/package/batocera/libraries/python-lgpio/Config.in
+++ b/package/batocera/libraries/python-lgpio/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_PYTHON_LGPIO
 	bool "python-lgpio"
 	select BR2_PACKAGE_LIBLGPIO
+	select BR2_PACKAGE_HOST_SWIG
 	help
 	  lgpio is a module for Linux Single Board Computers (SBC)
 	  which allows control of the General Purpose Input Outputs (GPIO).
