Enable per-package (parallel) build for a few targets + associated build fixes

--- a/package/reglinux/emulators/vice/Config.in
+++ b/package/reglinux/emulators/vice/Config.in
@@ -12,7 +12,7 @@ config BR2_PACKAGE_VICE
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_LIBVORBIS
 	select BR2_PACKAGE_MPG123
-	select BR2_PACKAGE_FLAG
+	select BR2_PACKAGE_FLAC
 	select BR2_PACKAGE_HOST_XA
 	select BR2_PACKAGE_HOST_DOS2UNIX
 	help
