--- a/package/reglinux/ports/eduke32/Config.in
+++ b/package/reglinux/ports/eduke32/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_EDUKE32
     bool "eduke32"
     depends on BR2_INSTALL_LIBSTDCPP
+    depends on BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_HAS_LIBGLES
     select BR2_PACKAGE_SDL2
     select BR2_PACKAGE_FLAC
     select BR2_PACKAGE_LIBVPX
