--- a/package/reglinux/emulators/ruffle/Config.in
+++ b/package/reglinux/emulators/ruffle/Config.in
@@ -1,5 +1,7 @@
 config BR2_PACKAGE_RUFFLE
 	bool "ruffle"
+	depends on BR2_PACKAGE_HAS_UDEV
+	depends on BR2_PACKAGE_ALSA_LIB
 	depends on BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS
 	select BR2_PACKAGE_HOST_RUSTC
 
