--- a/package/reglinux/ports/corsixth/Config.in
+++ b/package/reglinux/ports/corsixth/Config.in
@@ -9,7 +9,7 @@ config BR2_PACKAGE_CORSIXTH
 	select BR2_PACKAGE_LUASEC
 	select BR2_PACKAGE_SDL2_MIXER
 	select BR2_PACKAGE_FFMPEG
-
+	select BR2_PACKAGE_LIBCURL
 	help
 	  CorsixTH - Theme Hospital engine
 
