--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1416,16 +1416,14 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_DOLPHIN		if BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_S9GEN4
 
 	# Nintendo Switch
-	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
-							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
-							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
-	#select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY ||
-	#						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
-	#						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
-	#						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
-	#						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588
+	select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_RK3588
 
 	# Triforce
 	select BR2_PACKAGE_DOLPHIN_TRIFORCE		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
