--- a/package/reglinux/libraries/reglinux-qt6/Config.in
+++ b/package/reglinux/libraries/reglinux-qt6/Config.in
@@ -20,6 +20,11 @@ config BR2_PACKAGE_REGLINUX_QT6
 	select BR2_PACKAGE_ZLIB
 	select BR2_PACKAGE_XCB_UTIL_CURSOR		if BR2_PACKAGE_XWAYLAND
 	select BR2_PACKAGE_XCB_UTIL_KEYSYMS		if BR2_PACKAGE_XWAYLAND
+	select BR2_PACKAGE_FONTCONFIG
+	select BR2_PACKAGE_LIBGLIB2
+	select BR2_PACKAGE_LIBPNG
+	select BR2_PACKAGE_FREETYPE
+	select BR2_PACKAGE_DBUS
 
 	select BR2_PACKAGE_QT6				if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
 	select BR2_PACKAGE_QT6_VERSION_LATEST		if BR2_PACKAGE_REGLINUX_QT6_BUILD_FROM_SOURCE
