--- a/package/reglinux/ports/etlegacy/Config.in
+++ b/package/reglinux/ports/etlegacy/Config.in
@@ -11,7 +11,11 @@ config BR2_PACKAGE_ETLEGACY
 	select BR2_PACKAGE_OPENSSL
 	select BR2_PACKAGE_SDL2
 	select BR2_PACKAGE_MINIZIP
+	select BR2_PACKAGE_MINIZIP_ZLIB
 	select BR2_PACKAGE_CJSON
+	select BR2_PACKAGE_JPEG
+	select BR2_PACKAGE_SQLITE
+
 	help
 	  ET: Legacy is an open source project based on the code of Wolfenstein: Enemy Territory
 	  which was released in 2010 under the terms of the GPLv3 license.
