Fix RK3399 parallel builds + more parallel fixes

--- a/package/reglinux/libraries/librashader/Config.in
+++ b/package/reglinux/libraries/librashader/Config.in
@@ -2,6 +2,8 @@ config BR2_PACKAGE_LIBRASHADER
 	bool "librashder"
 	depends on BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS
 	select BR2_PACKAGE_HOST_RUSTC
+	depends on BR2_PACKAGE_LIBGLFW
+	depends on BR2_PACKAGE_XORG7
 
 	help
         librashader is a preprocessor, compiler, and runtime for RetroArch 'slang' shaders, rewritten in pure Rust.
