--- a/package/reglinux/libraries/reglinux-qt6/Config.in
+++ b/package/reglinux/libraries/reglinux-qt6/Config.in
@@ -18,6 +18,7 @@ config BR2_PACKAGE_REGLINUX_QT6
 	select BR2_PACKAGE_PCRE2_16
 	select BR2_PACKAGE_PCRE2_32 # REG fix qt6.5 build failing if not PCRE2_32 selected
 	select BR2_PACKAGE_ZLIB
+	select BR2_PACKAGE_LIBXKBCOMMON			if BR2_PACKAGE_XWAYLAND
 	select BR2_PACKAGE_XCB_UTIL_CURSOR		if BR2_PACKAGE_XWAYLAND
 	select BR2_PACKAGE_XCB_UTIL_KEYSYMS		if BR2_PACKAGE_XWAYLAND
 	select BR2_PACKAGE_FONTCONFIG
