--- a/package/reglinux/emulators/snes9x/Config.in
+++ b/package/reglinux/emulators/snes9x/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_SNES9X
 	bool "snes9x"
 	select BR2_PACKAGE_REGLINUX_QT6
+	select BR2_PACKAGE_SDL2
 
 	help
 	  Snes9x - Portable Super Nintendo Entertainment System (TM) emulator
