--- a/package/batocera/ports/theforceengine/Config.in
+++ b/package/batocera/ports/theforceengine/Config.in
@@ -1,8 +1,9 @@
 config BR2_PACKAGE_THEFORCEENGINE
     bool "theforceengine"
-    select BR2_PACKAGE_LIBGLEW
     select BR2_PACKAGE_SDL2
     select BR2_PACKAGE_SDL2_IMAGE
+    select BR2_PACKAGE_LIBGLEW
+    select BR2_PACKAGE_LIBGLU
     help
       Modern "Jedi Engine" replacement supporting Dark Forces, mods,
       and in the future Outlaws.
