Fix JH7110 parallel build (ares disabled so far...)

--- a/package/reglinux/emulators/ares/Config.in
+++ b/package/reglinux/emulators/ares/Config.in
@@ -7,7 +7,8 @@ config BR2_PACKAGE_ARES
     select BR2_PACKAGE_LIBGTK3
     select BR2_PACKAGE_LIBRASHADER
     depends on BR2_PACKAGE_HAS_LIBGL && BR2_ARCH_IS_64
-  
+    depends on BR2_PACKAGE_XORG7 && BR2_PACKAGE_REGLINUX_XWAYLAND
+
     help
       ares is a cross-platform, open source, multi-system emulator, focusing on accuracy and preservation.
 
