Fix ares build on RISC-V 64bit

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -798,8 +798,7 @@ config BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS
     select BR2_PACKAGE_MEDNAFEN			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
 
     # Ares (OpenGL 3.3+ or Vulkan or wgpu)
-    # Temp hack to disabled on RISC-V
-    select BR2_PACKAGE_ARES			if !BR2_riscv && BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL && BR2_PACKAGE_REGLINUX_VULKAN
+    select BR2_PACKAGE_ARES			if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL && BR2_PACKAGE_REGLINUX_VULKAN
 
 #### Wine Layer ####
 config BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
