--- a/package/reglinux/utils/itstool/Config.in
+++ b/package/reglinux/utils/itstool/Config.in
@@ -1,5 +1,12 @@
 config BR2_PACKAGE_ITSTOOL
 	bool "itstool"
+	select BR2_PACKAGE_PYTHON3
+	select BR2_PACKAGE_PYTHON_LXML
+
+config BR2_PACKAGE_HOST_ITSTOOL
+	bool "host-itstool"
+	select BR2_PACKAGE_HOST_PYTHON3
+	select BR2_PACKAGE_HOST_PYTHON_LXML
 
 	help 
 	    Translate XML with PO files using W3C Internationalization Tag Set rules
