--- a/package/batocera/emulators/pcsx2/Config.in
+++ b/package/batocera/emulators/pcsx2/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_PCSX2
     depends on BR2_x86_64
     depends on BR2_PACKAGE_XORG7
     select BR2_PACKAGE_FMT
+    select BR2_PACKAGE_JPEG
     select BR2_PACKAGE_ALSA_LIB
     select BR2_PACKAGE_FREETYPE
     select BR2_PACKAGE_ZLIB
