--- a/package/reglinux/emulators/cemu/Config.in
+++ b/package/reglinux/emulators/cemu/Config.in
@@ -20,6 +20,8 @@ config BR2_PACKAGE_CEMU
     select BR2_PACKAGE_WXWIDGETS
     select BR2_PACKAGE_UPOWER                   # required by some cemuhook servers
     select BR2_PACKAGE_HIDAPI
+    select BR2_PACKAGE_BLUEZ5_UTILS
+
     help
       Cemu is a Wii U emulator that now runs natively on Linux.
 
