--- a/package/reglinux/emulators/libretro/libretro-kronos/Config.in
+++ b/package/reglinux/emulators/libretro/libretro-kronos/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_LIBRETRO_KRONOS
 	bool "libretro-kronos"
 	depends on BR2_PACKAGE_RETROARCH
 	depends on BR2_INSTALL_LIBSTDCPP
+	depends on BR2_PACKAGE_HAS_LIBGL || BR2_PACKAGE_HAS_LIBGLES
       help
         A libretro saturn emulator core.
 
