--- a/package/reglinux/emulators/libretro/libretro-play/Config.in
+++ b/package/reglinux/emulators/libretro/libretro-play/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_LIBRETRO_PLAY
     bool "libretro-play"
-    select BR2_PACKAGE_LIBGLEW              if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
+    select BR2_PACKAGE_LIBGLEW	if BR2_PACKAGE_HAS_LIBGL
+    select BR2_PACKAGE_LIBGLU   if BR2_PACKAGE_HAS_LIBGL
 
       help
         Play! - PlayStation2 Emulator
