--- a/package/reglinux/emulators/play/Config.in
+++ b/package/reglinux/emulators/play/Config.in
@@ -3,7 +3,8 @@ config BR2_PACKAGE_PLAY
     select BR2_PACKAGE_PCRE2
     select BR2_PACKAGE_LIBCURL
     select BR2_PACKAGE_LIBCURL_OPENSSL
-    select BR2_PACKAGE_LIBGLEW		               if BR2_PACKAGE_XORG7
+    select BR2_PACKAGE_LIBGLEW		               if BR2_PACKAGE_REGLINUX_XWAYLAND
+    select BR2_PACKAGE_LIBGLU		               if BR2_PACKAGE_REGLINUX_XWAYLAND
     select BR2_PACKAGE_OPENAL
     select BR2_PACKAGE_REGLINUX_QT6
     select BR2_PACKAGE_SQLITE
