Fix ES hanging when creating new password
- Always create a new random password if no previous password found.
- Avoid some pipelines and improve setRootPassword algorith.

--- a/board/batocera/fsoverlay/etc/ksmbd/ksmbd-secure.conf
+++ b/board/batocera/fsoverlay/etc/ksmbd/ksmbd-secure.conf
@@ -1,13 +1,10 @@
-; see ksmbd.conf(5) for details
-
 [global]
-	; global parameters
 	guest account =
 	map to guest = never
 	netbios name = REGLINUX
+    workgroup = WORKGROUP
 
 [share]
-	; share parameters
 	comment = REG-Linux user data
 	path = /userdata
 	browseable = yes
