--- a/package/reglinux/reglinux-system/system.conf
+++ b/package/reglinux/reglinux-system/system.conf
@@ -2,7 +2,7 @@
 
 ## Security
 ## Enable this to enforce security, requiring a password to access the network share.
-#system.security.enabled=0
+system.security.enabled=1
 
 ## Services
 # exampe: system.services=service1 service2
