--- a/board/batocera/fsoverlay/etc/ksmbd/ksmbd.conf
+++ b/board/batocera/fsoverlay/etc/ksmbd/ksmbd.conf
@@ -1,13 +1,10 @@
-; see ksmbd.conf(5) for details
-
 [global]
-	; global parameters
 	guest account = root
 	map to guest = bad user
 	netbios name = REGLINUX
+    workgroup = WORKGROUP
 
 [share]
-	; share parameters
 	comment = REG-Linux user data
 	path = /userdata
 	browseable = yes
